# synexa-python

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
synexa/: __init__.py
