[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synexa"
version = "0.1.0"
authors = [
    { name="Synexa", email="support@synexa.ai" },
]
description = "Python client for Synexa AI API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://synexa.ai"
"Bug Tracker" = "https://github.com/synexa-ai/synexa-python/issues"
